refactor(core): 将多个条件判断语句重构为switch表达式并添加新的测试用例
- 将AiGraphApplyService中的sanitizeForJson方法从if-else链改为switch表达式
- 将AiGraphPlanDslAdapterService中的sanitizeForJson方法从if-else链改为switch表达式
- 将AiNodeSchemaCatalog中的类型判断逻辑改为switch表达式
- 将AssertNode中的resolveCondition方法从if-else链改为switch表达式
- 将ExportDataNode中的toCsv和toJson方法从if-else链改为switch表达式
- 将GeometrySurfaceElement中的collectGeometry方法从if-else链改为switch表达式
- 将PreviewGeometryNode中的collectGeometryInput方法从if-else链改为switch表达式
- 将SdfBoundsEstimator中的estimate方法从if-else链改为switch表达式
- 将StringFormatNode中的valueToString方法从if-else链改为switch表达式
- 在ExportDataNode中使用getFirst()替代get(0)来获取列表第一个元素
- 向graph_presets.json和graph_presets_updated.json添加新的建筑组件预设
- 扩展GraphPresetRules以支持节点状态属性映射
- 在GraphPresetApplier中应用预设节点的状态配置
- 添加ArchitecturalMiniBuildingWorkflowContractTest用于验证建筑工作流程合同
- 添加Qodana静态代码分析配置文件qodana.yaml